fixed and added animation of the burger menu visible-2

--- a/src/scss/modules/header.scss
+++ b/src/scss/modules/header.scss
@@ -40,9 +40,11 @@
 			letter-spacing: 0.2em;
 			color: $color-header-text;
 		}
-		&__menu-burger {
-			display: none;
-		}
+		
+}
+
+.header__menu-burger {
+	display: none;
 }
 
 @media (max-width: 767.98px) {
@@ -85,64 +87,65 @@
 			color: aqua;
 		}
 	}
-}
-
-.header__menu-burger {
-	position: absolute;
-	display: block;
-	width: 30px;
-	height: 30px;
-	top: 20px;
-	right: 20px;
-		& span:nth-child(1){
-		transition: all 1s;
+	.header__menu-burger {
 		position: absolute;
 		display: block;
 		width: 30px;
-		height: 1px;
-		background-color: #000;
-		}
-		& span:nth-child(2) {
-			&::after {
-				content: '';
-				transition: all 1s;
-				display: block;
-				position: absolute;
-				margin: 8px 0 0 0;
-				width: 30px;
-				height: 1px;
-				top: 0;
-				right: 0;
-				background-color: #000;
+		height: 30px;
+		top: 20px;
+		right: 20px;
+			& span:nth-child(1){
+			transition: all 1s;
+			position: absolute;
+			display: block;
+			width: 30px;
+			height: 1px;
+			background-color: #000;
 			}
-			&::before {
-				content: '';
-				transition: all 1s;
-				display: block;
-				position: absolute;
-				margin: 17px 0 0 0;
-				width: 30px;
-				height: 1px;
-				top: 0;
-				right: 0;
-				background-color: #000;
+			& span:nth-child(2) {
+				&::after {
+					content: '';
+					transition: all 1s;
+					display: block;
+					position: absolute;
+					margin: 8px 0 0 0;
+					width: 30px;
+					height: 1px;
+					top: 0;
+					right: 0;
+					background-color: #000;
+				}
+				&::before {
+					content: '';
+					transition: all 1s;
+					display: block;
+					position: absolute;
+					margin: 17px 0 0 0;
+					width: 30px;
+					height: 1px;
+					top: 0;
+					right: 0;
+					background-color: #000;
+				}
 			}
-		}
+			&.active {
+				& span:nth-child(1) {
+					opacity: 0;
+					top: -50px;
+				}
+				& span:nth-child(2) {
+					&::after {
+						transform: rotate(45deg);
+						margin: 13px 0 0 0;
+					}
+					&::before {
+						transform: rotate(-45deg);
+						margin: 13px 0 0 0;
+					}
+				}
+			}
+	}
 }
 
-.header__menu-burger.active {
-	& span:nth-child(1) {
-		opacity: 0;
-		top: -50px;
-	}
-	& span:nth-child(2) {
-		&::after {
-			transform: rotate(45deg);
-			margin: 13px 0 0 0;
-		}
-		&::before {
-			transform: rotate(-45deg);
-			margin: 13px 0 0 0;
-		}
-	}
-}
+
+
